# prompt2GDPR-v2

./: .gitattributes  .gitignore  README.md  analyze_runs.py  config.py  diff_runs.py  index.html  main.py  prompt2GDPR_v2 token.docx  pyproject.toml  report_html.py  review_run.py
.claude/: settings.local.json
.github/workflows/: tests.yml
agents/: blind_labeler.py  evaluator.py  extractor.py  finalizer.py  reflector.py
data/legal_refs/primary/: article_5_1b.txt  article_89.txt  (+3 more)
data/policies/: policy_long.txt  policy_medium.txt  policy_short.txt
evaluation/: metrics.py
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json
output/: two_pass_extraction_report.md
prompts/: blind_labeler_prompt.py  evaluator_prompt.py  extractor_prompt.py  finalizer_prompt.py  reflector_prompt.py  rubric.py  scout_prompt.py
tests/: test_batch_comparison.py  test_extraction_mode.py  test_html_report.py  test_label_panel.py  test_policy_discovery.py  test_policy_loader.py  test_report_scout_section.py  test_report_trace_section.py  test_report_usage_section.py  test_review_report.py  test_rubric_extraction.py  test_run_diff.py  test_run_metadata.py  test_run_trace.py  test_runs_index.py  test_runs_summary.py  test_save_result_review.py  test_usage_meter.py
utils/: batch_comparison.py  html_report.py  label_panel.py  legal_tools.py  policy_loader.py  reflector_merge.py  report_generator.py  review_report.py  run_diff.py  run_metadata.py  run_trace.py  runs_index.py  runs_summary.py  schema_validator.py  section_splitter.py  usage_meter.py  verifier.py
(+37 files in other folders)
